--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/noto-sans-jp": "^4.5.0",
     "framer-motion": "^4",
     "next": "11.0.1",
     "react": "17.0.2",
